--- a/index.html
+++ b/index.html
@@ -162,19 +162,18 @@
 
   <!-- About me 페이지 -->
   <div id="about">
-    <!-- 공통 : 뒤로 가기 -->
     <div id="menuBar">
       <div id="back">
         <a href="./index.html">
-          <i class="icon arrow-white"></i>
+          <i class="icon arrow-lavender"></i>
         </a>
       </div>
-      <p class="eng title-about">About me</p>
+      <p class="eng">About me</p>
     </div>
     <div class="about__box">
       <p>
         안녕하세요, 웹 퍼블리셔 김지윤입니다.<br><br>
-        웹 표준에 준하는 시맨틱 마크업으로 반응형 웹사이트를 구현할 수 있습니다.<br>
+        저는 웹 표준에 준하는 시맨틱 마크업으로 반응형 웹사이트를 구현할 수 있습니다.<br>
         <span>HTML, CSS, Javascript, jQuery</span>등을 사용하지만 그 중에서도 CSS나 Javascript를 이용한 동적 모션 구현에 관심이 많습니다.<br>
         그리고 웹 퍼블리싱과 더불어 <span>Photoshop과 Illustrator, Adobe XD</span>를 이용한 디자인도 가능한 부분이 저의 강점입니다.<br></br>
 
@@ -254,10 +253,10 @@
     <div id="menuBar">
       <div id="back">
         <a href="./index.html">
-          <i class="icon arrow-white"></i>
+          <i class="icon arrow-orange"></i>
         </a>
       </div>
-      <p class="eng title-design">Design</p>
+      <p class="eng">Design</p>
     </div>
     <ul>
       <li>
@@ -298,10 +297,10 @@
     <div id="menuBar">
       <div id="back">
         <a href="./index.html">
-          <i class="icon arrow-white"></i>
+          <i class="icon arrow-pink"></i>
         </a>
       </div>
-      <p class="eng title-project">Projects</p>
+      <p class="eng">Projects</p>
     </div>
     <ul>
       <li>
@@ -321,7 +320,7 @@
       <li>
         <a href="https://devjiyunkim.github.io/philips-korea/" target="_blank"></a>
         <div class="info">
-          <h2>필립스 코리아 홈페이지 리뉴얼 (개인)</h2>
+          <h2>필립스 코리아 홈페이지 리뉴얼 (개인작업)</h2>
           <div class="info__box">
             <P>- 메인 페이지 및 서브 페이지 리뉴얼</P>
             <p>- HTML5, CSS3, SCSS, Javascript, Plugin</p>
@@ -340,7 +339,7 @@
     <div id="menuBar">
       <div id="back">
         <a href="./index.html">
-          <i class="icon arrow-white"></i>
+          <i class="icon arrow-green"></i>
         </a>
       </div>
     </div>
