Project 페이지 텍스트 추가

--- a/index.html
+++ b/index.html
@@ -350,7 +350,8 @@
         <div class="info">
           <h2>(주)리더스트레이딩 자사 홈페이지</h2>
           <div class="info__box">
-            <P>- 전체 페이지 리뉴얼 기획/디자인/퍼블리싱</P>
+            <p>- 프로젝트 기여도: 100%</p>
+            <p>- 전체 페이지 리뉴얼 기획/디자인/퍼블리싱</p>
             <p>- 그누보드 커스터마이징</p>
             <p>- HTML5, CSS3, SCSS, Javascript, Plugin</p>
           </div>
@@ -364,7 +365,8 @@
         <div class="info">
           <h2>필립스 코리아 홈페이지 리뉴얼 (개인작업)</h2>
           <div class="info__box">
-            <P>- 메인 페이지 및 서브 페이지 리뉴얼</P>
+            <p>- 프로젝트 기여도: 100%</p>
+            <p>- 메인 페이지 및 서브 페이지 리뉴얼</p>
             <p>- HTML5, CSS3, SCSS, Javascript, Plugin</p>
             <p>- 작업 기간: 약 2일</p>
           </div>
