svg 오류 수정 (태블릿 및 모바일)

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
     <div id="menu">
       <div class="menuBox menu_aboutMe" onclick="menuControl('about', 'design', 'projects', 'contact');">
-        <svg viewBox="120 35 500 450" preserveAspectRatio="none" id="blobSvg_about">
+        <svg viewBox="120 35 500 450" preserveAspectRatio="none" id="blobSvg_about" style="width:100%; height:100%;">
           <g transform="translate(129.7785415649414, -4.38262939453125)">
             <path fill="#7386C2">
               <animate
@@ -102,7 +102,7 @@
         <p class="eng">About me</p>
       </div>
       <div class="menuBox menu_design" onclick="menuControl('design', 'about', 'projects', 'contact');">
-        <svg viewBox="120 10 500 450" preserveAspectRatio="none" id="blobSvg_design">
+        <svg viewBox="120 10 500 450" preserveAspectRatio="none" id="blobSvg_design" style="width:100%; height:100%;">
           <g transform="translate(129.7785415649414, -4.38262939453125)">
             <path fill="#EEAF5E">
               <animate
@@ -126,8 +126,7 @@
                   64,181Q112,112,181,56Q250,0,333,42Q416,84,425.5,167Q435,250,426.5,334Z;
 
                   M429.5,305Q360,360,305,426Q250,492,165,456Q80,420,84.5,335Q89,250,
-                  99.5,180Q110,110,180,86Q250,62,333,73Q416,84,457.5,167Q499,250,429.5,305Z;
-                  "
+                  99.5,180Q110,110,180,86Q250,62,333,73Q416,84,457.5,167Q499,250,429.5,305Z;"
                 ></animate>
             </path>
           </g>
@@ -135,7 +134,7 @@
         <p class="eng">Design</p>
       </div>
       <div class="menuBox menu_projects" onclick="menuControl('projects', 'about', 'design', 'contact');">
-        <svg viewBox="120 25 500 450" preserveAspectRatio="none" id="blobSvg_projects">
+        <svg viewBox="120 25 500 450" preserveAspectRatio="none" id="blobSvg_projects" style="width:100%; height:100%;">
           <g transform="translate(129.7785415649414, -4.38262939453125)">
             <path fill="#F39DC0">
               <animate
@@ -159,8 +158,7 @@
                   175.5Q101,101,175.5,69Q250,37,326.5,67Q403,97,408.5,173.5Q414,250,415.5,333.5Z;
 
                   M425.5,335.5Q421,421,335.5,429Q250,437,187,406.5Q124,376,66,313Q8,250,57,
-                  178Q106,106,178,65Q250,24,332,55Q414,86,422,168Q430,250,425.5,335.5Z;
-                  "
+                  178Q106,106,178,65Q250,24,332,55Q414,86,422,168Q430,250,425.5,335.5Z;"
                 ></animate>
             </path>
           </g>
@@ -168,7 +166,7 @@
         <p class="eng">Projects</p>
       </div>
       <div class="menuBox menu_contact" onclick="menuControl('contact', 'about', 'design', 'projects');">
-        <svg viewBox="120 35 500 450" preserveAspectRatio="none" id="blobSvg_contact">
+        <svg viewBox="120 35 500 450" preserveAspectRatio="none" id="blobSvg_contact" style="width:100%; height:100%;">
           <g transform="translate(129.7785415649414, -4.38262939453125)">
             <path fill="#009886">
               <animate
