--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="안녕하세요, 웹 퍼블리셔 김지윤입니다.">
-  <meta name="keywords" content="웹 퍼블리셔 포트폴리오, 웹 퍼블리셔, 퍼블리셔, JiyunKim, 김지윤">
-  <meta property="og:site_name" content="Jiyun Kim | 웹 퍼블리셔 포트폴리오">
-  <meta property="og:title" content="Jiyun Kim | 웹 퍼블리셔 포트폴리오">
-  <meta property="og:description" content="웹 퍼블리셔 포트폴리오">
+  <meta name="description" content="안녕하세요, 웹 디자이너 김지윤입니다.">
+  <meta name="keywords" content="웹 디자이너 포트폴리오, 웹 디자이너, 디자이너, JiyunKim, 김지윤">
+  <meta property="og:site_name" content="Jiyun Kim | 웹 디자이너 포트폴리오">
+  <meta property="og:title" content="Jiyun Kim | 웹 디자이너 포트폴리오">
+  <meta property="og:description" content="웹 디자이너 포트폴리오">
   <meta property="og:url" content="https://devjiyunkim.github.io/my-portfolio/">
   <meta property="og:image" content="https://devjiyunkim.github.io/my-portfolio/src/contact/profile.jpg">
   <meta name="msapplication-TileColor" content="#FFF" />
@@ -57,7 +57,7 @@
     <div id="greeting">
       <h1>
         안녕하세요,<br>
-        <span>배움 속 행복</span>을 추구하는 웹 퍼블리셔 김지윤입니다.
+        <span>배움 속 행복</span>을 추구하는 웹 디자이너 김지윤입니다.
       </h1>
       <div class="icons">
         <a href="https://github.com/devJiyunKim" target="_blank">
@@ -214,26 +214,29 @@
     </div>
     <div class="about__box">
       <p>
-        안녕하세요, 웹 퍼블리셔 김지윤입니다.<br><br>
-        저는 웹 표준에 준하는 시맨틱 마크업으로 반응형 웹사이트를 구현할 수 있습니다.<br>
-        <span>HTML, CSS, Javascript, jQuery</span>등을 사용하지만 그 중에서도 CSS나 Javascript를 이용한 동적 모션 구현에 관심이 많습니다.<br>
-        그리고 웹 퍼블리싱과 더불어 <span>Photoshop과 Illustrator, Adobe XD</span>를 이용한 디자인도 가능한 부분이 저의 강점입니다.<br></br>
+        안녕하세요, 웹 디자이너 김지윤입니다.<br><br>
+        저는 주로 <span>Photoshop과 Illustrator, Adobe XD, Figma</span>를 이용하여 이미지, 배너, 페이지 등의 웹 디자인을 합니다.<br>
+        뿐만 아니라 제작한 이미지를 활용하여 웹페이지를 구현할 수 있습니다.<br>
+        이렇게 웹 디자인과 더불어 <span>HTML, CSS, Javascript, jQuery</span>등을 사용한 웹 퍼블리싱도 가능한 부분이 저의 강점입니다.<br></br>
 
-        웹 퍼블리셔로서 제일 중요한 것은 <span>원활한 커뮤니케이션 능력</span>이라고 생각합니다.<br>
-        이전에 자사 홈페이지 리뉴얼 프로젝트를 진행하며 여러 부서와 자주 의견을 나누었고, 각 부서에 필요한 성과를 이끌어 낸 경험이 있습니다.<br>
+        웹 디자이너로서 제일 중요한 것은 <span>원활한 커뮤니케이션 능력</span>이라고 생각합니다.<br>
+        이전에 자사 홈페이지 리뉴얼 프로젝트, UI/UX 관련 업무를 진행하며 여러 부서와 자주 의견을 나누었고, 각 부서에 필요한 성과를 이끌어 낸 경험이 있습니다.<br>
         저는 해당 프로젝트 기획부터 디자인, 퍼블리싱, 유지 및 보수까지 모두 참여하여 <span>자기 주도적 업무</span>에 강합니다.<br>
-        그리고 각 페이지 별로 플러그인을 사용하여 필요한 기능이나 효과 등 여러 요소들을 구현해 낼 수 있습니다.<br>
-        마지막으로 저는 최종적으로 프론트엔드 개발에도 관심이 있어 React를 학습 중에 있습니다.<br><br>
+        그리고 각 페이지 별로 플러그인을 사용하여 필요한 기능이나 효과 등 제가 가진 디자인과 퍼블리싱을 통해 구현해 낼 수 있습니다.<br>
 
-        하루하루 변해가는 시대의 퍼블리셔로서 순간의 업무에 안주하기보다 <span>매일 발전을 위해 노력하는 퍼블리셔</span>가 되고자 합니다.<br>
-        아직 경험은 부족하지만 저의 강점인 성실함과 적응력을 활용하여 <span>많은 사람이 필요로 하는 퍼블리셔</span>로 성장하고 싶습니다 :)
+        하루하루 변해가는 시대의 디자이너로서 순간의 업무에 안주하기보다 <span>매일 발전을 위해 노력하는 디자이너</span>가 되고자 합니다.<br>
+        아직 경험은 부족하지만 저의 강점인 성실함과 적응력을 활용하여 <span>많은 사람이 필요로 하는 디자이너</span>로 성장하고 싶습니다 :)
       </p>
     </div>
     <div class="about__box">
       <div class="about__box-work">
         <h3 class="eng">Work Experience</h3>
         <p class="eng">2019.08 ~ 2022.06</p>
-        <p>리더스트레이딩 홍보마케팅팀 - 웹디자인 및 <span onclick="menuControl('projects', 'about', 'design', 'contact');">홈페이지</span> 담당</p>
+        <p>리더스트레이딩 홍보마케팅팀</p>
+        <p class="mb"><span onclick="menuControl('projects', 'about', 'design', 'contact');">웹디자인 및 홈페이지</span> 담당</p>
+        <p class="eng">2019.08 ~ 2022.06</p>
+        <p>드림메이커엔터테인먼트리미티드 스마트티켓사업본부 개발팀</p>
+        <p><span onclick="menuControl('design', 'about', 'projects', 'contact');">웹디자인 및 '티켓앤' 앱 관련 디자인 및 퍼블리싱</span> 담당</p>
       </div>
       <div class="about__box-skills">
         <div class="about__box-skills-lang">
@@ -265,24 +268,24 @@
           <h3 class="eng">Tools</h3>
           <ul>
             <li>
-              <svg role="img" style="fill:rgb(255,255,255);"viewBox="0 0 24 24"><title>Visual Studio Code</title><path d="M23.15 2.587L18.21.21a1.494 1.494 0 0 0-1.705.29l-9.46 8.63-4.12-3.128a.999.999 0 0 0-1.276.057L.327 7.261A1 1 0 0 0 .326 8.74L3.899 12 .326 15.26a1 1 0 0 0 .001 1.479L1.65 17.94a.999.999 0 0 0 1.276.057l4.12-3.128 9.46 8.63a1.492 1.492 0 0 0 1.704.29l4.942-2.377A1.5 1.5 0 0 0 24 20.06V3.939a1.5 1.5 0 0 0-.85-1.352zm-5.146 14.861L10.826 12l7.178-5.448v10.896z"/></svg>
-              <p class="eng">VS Code</p>
-            </li>
-            <li>
-              <svg role="img" style="fill:rgb(255,255,255);"viewBox="0 0 24 24"><title>Git</title><path d="M23.546 10.93L13.067.452c-.604-.603-1.582-.603-2.188 0L8.708 2.627l2.76 2.76c.645-.215 1.379-.07 1.889.441.516.515.658 1.258.438 1.9l2.658 2.66c.645-.223 1.387-.078 1.9.435.721.72.721 1.884 0 2.604-.719.719-1.881.719-2.6 0-.539-.541-.674-1.337-.404-1.996L12.86 8.955v6.525c.176.086.342.203.488.348.713.721.713 1.883 0 2.6-.719.721-1.889.721-2.609 0-.719-.719-.719-1.879 0-2.598.182-.18.387-.316.605-.406V8.835c-.217-.091-.424-.222-.6-.401-.545-.545-.676-1.342-.396-2.009L7.636 3.7.45 10.881c-.6.605-.6 1.584 0 2.189l10.48 10.477c.604.604 1.582.604 2.186 0l10.43-10.43c.605-.603.605-1.582 0-2.187"/></svg>
-              <p class="eng">Git</p>
-            </li>
-            <li>
-              <svg role="img" style="fill:rgb(255,255,255);"viewBox="0 0 24 24"><title>Adobe XD</title><path d="M18.835.3H5.165A5.165 5.165 0 0 0 0 5.465v13.07A5.165 5.165 0 0 0 5.165 23.7h13.67A5.165 5.165 0 0 0 24 18.535V5.465A5.165 5.165 0 0 0 18.835.3zm-6.106 16.491h-2.287c-.16 0-.274-.006-.338-.113-.215-.419-.43-.835-.644-1.248a45.137 45.137 0 0 0-.684-1.264 66.961 66.961 0 0 1-.717-1.305h-.016a52.7 52.7 0 0 1-.668 1.288c-.23.429-.459.856-.684 1.28A54.85 54.85 0 0 1 6 16.693c-.044.097-.119.107-.227.107H3.568c-.043 0-.067.017-.072-.026a.166.166 0 0 1 .024-.113l3.107-5.105L3.6 6.438c-.033-.043-.038-.078-.016-.107a.115.115 0 0 1 .097-.04h2.27a.36.36 0 0 1 .145.024.292.292 0 0 1 .096.089c.193.43.408.859.644 1.288.236.429.475.853.716 1.272.241.419.464.843.668 1.272h.016c.213-.44.43-.869.652-1.288.222-.419.447-.84.676-1.264.231-.425.453-.847.668-1.264a.246.246 0 0 1 .064-.106.239.239 0 0 1 .129-.024h2.109a.093.093 0 0 1 .112.067.093.093 0 0 1-.031.094l.001.004-2.995 4.943 3.204 5.249c.021.037.026.08.016.121-.01.036-.047.012-.112.023zm7.681-.42a8.02 8.02 0 0 1-1.626.483 8.63 8.63 0 0 1-1.547.145 5.006 5.006 0 0 1-2.149-.45 3.421 3.421 0 0 1-1.506-1.361 4.348 4.348 0 0 1-.548-2.278 4.202 4.202 0 0 1 .548-2.109 4.018 4.018 0 0 1 1.595-1.545 5.139 5.139 0 0 1 2.737-.572c.086.005.188.013.306.024V5.536c0-.075.032-.113.097-.113h2.028a.086.086 0 0 1 .097.073.096.096 0 0 1 0 .024v9.517c0 .183.008.381.024.596.016.214.03.407.04.579a.163.163 0 0 1-.096.159zm-2.457-5.812c.09.009.179.025.266.048v4.395a1.634 1.634 0 0 1-.354.064 4.965 4.965 0 0 1-.419.016 2.656 2.656 0 0 1-.83-.129 1.714 1.714 0 0 1-.676-.402 1.973 1.973 0 0 1-.451-.708 2.83 2.83 0 0 1-.169-1.031 2.217 2.217 0 0 1 .33-1.272c.213-.316.504-.571.845-.741.35-.173.736-.262 1.127-.258.111.002.221.007.331.018z"/></svg>
-              <p class="eng">Adobe XD</p>
-            </li>
-            <li>
-              <svg role="img" style="fill:rgb(255,255,255);"viewBox="0 0 24 24"><title>Adobe Photoshop</title><path d="M9.85 8.42c-.37-.15-.77-.21-1.18-.2-.26 0-.49 0-.68.01-.2-.01-.34 0-.41.01v3.36c.14.01.27.02.39.02h.53c.39 0 .78-.06 1.15-.18.32-.09.6-.28.82-.53.21-.25.31-.59.31-1.03.01-.31-.07-.62-.23-.89-.17-.26-.41-.46-.7-.57zM19.75.3H4.25C1.9.3 0 2.2 0 4.55v14.899c0 2.35 1.9 4.25 4.25 4.25h15.5c2.35 0 4.25-1.9 4.25-4.25V4.55C24 2.2 22.1.3 19.75.3zm-7.391 11.65c-.399.56-.959.98-1.609 1.22-.68.25-1.43.34-2.25.34-.24 0-.4 0-.5-.01s-.24-.01-.43-.01v3.209c.01.07-.04.131-.11.141H5.52c-.08 0-.12-.041-.12-.131V6.42c0-.07.03-.11.1-.11.17 0 .33 0 .56-.01.24-.01.49-.01.76-.02s.56-.01.87-.02c.31-.01.61-.01.91-.01.82 0 1.5.1 2.06.31.5.17.96.45 1.34.82.32.32.57.71.73 1.14.149.42.229.85.229 1.3.001.86-.199 1.57-.6 2.13zm7.091 3.89c-.28.4-.671.709-1.12.891-.49.209-1.09.318-1.811.318-.459 0-.91-.039-1.359-.129-.35-.061-.7-.17-1.02-.32-.07-.039-.121-.109-.111-.189v-1.74c0-.029.011-.07.041-.09.029-.02.06-.01.09.01.39.23.8.391 1.24.49.379.1.779.15 1.18.15.38 0 .65-.051.83-.141.16-.07.27-.24.27-.42 0-.141-.08-.27-.24-.4-.16-.129-.489-.279-.979-.471-.51-.18-.979-.42-1.42-.719-.31-.221-.569-.51-.761-.85-.159-.32-.239-.67-.229-1.021 0-.43.12-.84.341-1.21.25-.4.619-.72 1.049-.92.469-.239 1.059-.349 1.769-.349.41 0 .83.03 1.24.09.3.04.59.12.86.23.039.01.08.05.1.09.01.04.02.08.02.12v1.63c0 .04-.02.08-.05.1-.09.02-.14.02-.18 0-.3-.16-.62-.27-.96-.34-.37-.08-.74-.13-1.12-.13-.2-.01-.41.02-.601.07-.129.03-.24.1-.31.2-.05.08-.08.18-.08.27s.04.18.101.26c.09.11.209.2.34.27.229.12.47.23.709.33.541.18 1.061.43 1.541.73.33.209.6.49.789.83.16.318.24.67.23 1.029.011.471-.129.94-.389 1.331z"/></svg>
+              <svg role="img" style="fill:rgb(255,255,255);" viewBox="0 0 24 24"><title>Adobe Photoshop</title><path d="M9.85 8.42c-.37-.15-.77-.21-1.18-.2-.26 0-.49 0-.68.01-.2-.01-.34 0-.41.01v3.36c.14.01.27.02.39.02h.53c.39 0 .78-.06 1.15-.18.32-.09.6-.28.82-.53.21-.25.31-.59.31-1.03.01-.31-.07-.62-.23-.89-.17-.26-.41-.46-.7-.57zM19.75.3H4.25C1.9.3 0 2.2 0 4.55v14.899c0 2.35 1.9 4.25 4.25 4.25h15.5c2.35 0 4.25-1.9 4.25-4.25V4.55C24 2.2 22.1.3 19.75.3zm-7.391 11.65c-.399.56-.959.98-1.609 1.22-.68.25-1.43.34-2.25.34-.24 0-.4 0-.5-.01s-.24-.01-.43-.01v3.209c.01.07-.04.131-.11.141H5.52c-.08 0-.12-.041-.12-.131V6.42c0-.07.03-.11.1-.11.17 0 .33 0 .56-.01.24-.01.49-.01.76-.02s.56-.01.87-.02c.31-.01.61-.01.91-.01.82 0 1.5.1 2.06.31.5.17.96.45 1.34.82.32.32.57.71.73 1.14.149.42.229.85.229 1.3.001.86-.199 1.57-.6 2.13zm7.091 3.89c-.28.4-.671.709-1.12.891-.49.209-1.09.318-1.811.318-.459 0-.91-.039-1.359-.129-.35-.061-.7-.17-1.02-.32-.07-.039-.121-.109-.111-.189v-1.74c0-.029.011-.07.041-.09.029-.02.06-.01.09.01.39.23.8.391 1.24.49.379.1.779.15 1.18.15.38 0 .65-.051.83-.141.16-.07.27-.24.27-.42 0-.141-.08-.27-.24-.4-.16-.129-.489-.279-.979-.471-.51-.18-.979-.42-1.42-.719-.31-.221-.569-.51-.761-.85-.159-.32-.239-.67-.229-1.021 0-.43.12-.84.341-1.21.25-.4.619-.72 1.049-.92.469-.239 1.059-.349 1.769-.349.41 0 .83.03 1.24.09.3.04.59.12.86.23.039.01.08.05.1.09.01.04.02.08.02.12v1.63c0 .04-.02.08-.05.1-.09.02-.14.02-.18 0-.3-.16-.62-.27-.96-.34-.37-.08-.74-.13-1.12-.13-.2-.01-.41.02-.601.07-.129.03-.24.1-.31.2-.05.08-.08.18-.08.27s.04.18.101.26c.09.11.209.2.34.27.229.12.47.23.709.33.541.18 1.061.43 1.541.73.33.209.6.49.789.83.16.318.24.67.23 1.029.011.471-.129.94-.389 1.331z"/></svg>
               <p class="eng">Adobe Photoshop</p>
             </li>
             <li>
-              <svg role="img" style="fill:rgb(255,255,255);"viewBox="0 0 24 24"><title>Adobe Illustrator</title><path d="M10.53 10.73c-.1-.31-.19-.61-.29-.92-.1-.31-.19-.6-.27-.89-.08-.28-.15-.54-.22-.78h-.02c-.09.43-.2.86-.34 1.29-.15.48-.3.98-.46 1.48-.14.51-.29.98-.44 1.4h2.54c-.06-.211-.14-.46-.23-.721-.09-.269-.18-.559-.27-.859zM19.75.3H4.25C1.9.3 0 2.2 0 4.55v14.9c0 2.35 1.9 4.25 4.25 4.25h15.5c2.35 0 4.25-1.9 4.25-4.25V4.55C24 2.2 22.1.3 19.75.3zM14.7 16.83h-2.091c-.069.01-.139-.04-.159-.11l-.82-2.38H7.91l-.76 2.35c-.02.09-.1.15-.19.141H5.08c-.11 0-.14-.061-.11-.18L8.19 7.38c.03-.1.06-.21.1-.33.04-.21.06-.43.06-.65-.01-.05.03-.1.08-.11h2.59c.08 0 .12.03.13.08l3.65 10.3c.03.109 0 .16-.1.16zm3.4-.15c0 .11-.039.16-.129.16H16.01c-.1 0-.15-.061-.15-.16v-7.7c0-.1.041-.14.131-.14h1.98c.09 0 .129.05.129.14v7.7zm-.209-9.03c-.231.24-.571.37-.911.35-.33.01-.65-.12-.891-.35-.23-.25-.35-.58-.34-.92-.01-.34.12-.66.359-.89.242-.23.562-.35.892-.35.391 0 .689.12.91.35.22.24.34.56.33.89.01.34-.11.67-.349.92z"/></svg>
+              <svg role="img" style="fill:rgb(255,255,255);" viewBox="0 0 24 24"><title>Adobe Illustrator</title><path d="M10.53 10.73c-.1-.31-.19-.61-.29-.92-.1-.31-.19-.6-.27-.89-.08-.28-.15-.54-.22-.78h-.02c-.09.43-.2.86-.34 1.29-.15.48-.3.98-.46 1.48-.14.51-.29.98-.44 1.4h2.54c-.06-.211-.14-.46-.23-.721-.09-.269-.18-.559-.27-.859zM19.75.3H4.25C1.9.3 0 2.2 0 4.55v14.9c0 2.35 1.9 4.25 4.25 4.25h15.5c2.35 0 4.25-1.9 4.25-4.25V4.55C24 2.2 22.1.3 19.75.3zM14.7 16.83h-2.091c-.069.01-.139-.04-.159-.11l-.82-2.38H7.91l-.76 2.35c-.02.09-.1.15-.19.141H5.08c-.11 0-.14-.061-.11-.18L8.19 7.38c.03-.1.06-.21.1-.33.04-.21.06-.43.06-.65-.01-.05.03-.1.08-.11h2.59c.08 0 .12.03.13.08l3.65 10.3c.03.109 0 .16-.1.16zm3.4-.15c0 .11-.039.16-.129.16H16.01c-.1 0-.15-.061-.15-.16v-7.7c0-.1.041-.14.131-.14h1.98c.09 0 .129.05.129.14v7.7zm-.209-9.03c-.231.24-.571.37-.911.35-.33.01-.65-.12-.891-.35-.23-.25-.35-.58-.34-.92-.01-.34.12-.66.359-.89.242-.23.562-.35.892-.35.391 0 .689.12.91.35.22.24.34.56.33.89.01.34-.11.67-.349.92z"/></svg>
               <p class="eng">Adobe Illustrator</p>
+            </li>
+            <li>
+              <svg role="img" style="fill:rgb(255,255,255);" viewBox="0 0 24 24"><title>Visual Studio Code</title><path d="M23.15 2.587L18.21.21a1.494 1.494 0 0 0-1.705.29l-9.46 8.63-4.12-3.128a.999.999 0 0 0-1.276.057L.327 7.261A1 1 0 0 0 .326 8.74L3.899 12 .326 15.26a1 1 0 0 0 .001 1.479L1.65 17.94a.999.999 0 0 0 1.276.057l4.12-3.128 9.46 8.63a1.492 1.492 0 0 0 1.704.29l4.942-2.377A1.5 1.5 0 0 0 24 20.06V3.939a1.5 1.5 0 0 0-.85-1.352zm-5.146 14.861L10.826 12l7.178-5.448v10.896z"/></svg>
+              <p class="eng">VS Code</p>
+            </li>
+            <li>
+              <svg role="img" style="fill:rgb(255,255,255);" viewBox="0 0 24 24"><title>Adobe XD</title><path d="M18.835.3H5.165A5.165 5.165 0 0 0 0 5.465v13.07A5.165 5.165 0 0 0 5.165 23.7h13.67A5.165 5.165 0 0 0 24 18.535V5.465A5.165 5.165 0 0 0 18.835.3zm-6.106 16.491h-2.287c-.16 0-.274-.006-.338-.113-.215-.419-.43-.835-.644-1.248a45.137 45.137 0 0 0-.684-1.264 66.961 66.961 0 0 1-.717-1.305h-.016a52.7 52.7 0 0 1-.668 1.288c-.23.429-.459.856-.684 1.28A54.85 54.85 0 0 1 6 16.693c-.044.097-.119.107-.227.107H3.568c-.043 0-.067.017-.072-.026a.166.166 0 0 1 .024-.113l3.107-5.105L3.6 6.438c-.033-.043-.038-.078-.016-.107a.115.115 0 0 1 .097-.04h2.27a.36.36 0 0 1 .145.024.292.292 0 0 1 .096.089c.193.43.408.859.644 1.288.236.429.475.853.716 1.272.241.419.464.843.668 1.272h.016c.213-.44.43-.869.652-1.288.222-.419.447-.84.676-1.264.231-.425.453-.847.668-1.264a.246.246 0 0 1 .064-.106.239.239 0 0 1 .129-.024h2.109a.093.093 0 0 1 .112.067.093.093 0 0 1-.031.094l.001.004-2.995 4.943 3.204 5.249c.021.037.026.08.016.121-.01.036-.047.012-.112.023zm7.681-.42a8.02 8.02 0 0 1-1.626.483 8.63 8.63 0 0 1-1.547.145 5.006 5.006 0 0 1-2.149-.45 3.421 3.421 0 0 1-1.506-1.361 4.348 4.348 0 0 1-.548-2.278 4.202 4.202 0 0 1 .548-2.109 4.018 4.018 0 0 1 1.595-1.545 5.139 5.139 0 0 1 2.737-.572c.086.005.188.013.306.024V5.536c0-.075.032-.113.097-.113h2.028a.086.086 0 0 1 .097.073.096.096 0 0 1 0 .024v9.517c0 .183.008.381.024.596.016.214.03.407.04.579a.163.163 0 0 1-.096.159zm-2.457-5.812c.09.009.179.025.266.048v4.395a1.634 1.634 0 0 1-.354.064 4.965 4.965 0 0 1-.419.016 2.656 2.656 0 0 1-.83-.129 1.714 1.714 0 0 1-.676-.402 1.973 1.973 0 0 1-.451-.708 2.83 2.83 0 0 1-.169-1.031 2.217 2.217 0 0 1 .33-1.272c.213-.316.504-.571.845-.741.35-.173.736-.262 1.127-.258.111.002.221.007.331.018z"/></svg>
+              <p class="eng">Adobe XD</p>
+            </li>
+            <li>
+              <svg role="img" style="fill:rgb(255,255,255);" viewBox="0 0 24 24"><title>Figma</title><path d="M15.852 8.981h-4.588V0h4.588c2.476 0 4.49 2.014 4.49 4.49s-2.014 4.491-4.49 4.491zM12.735 7.51h3.117c1.665 0 3.019-1.355 3.019-3.019s-1.355-3.019-3.019-3.019h-3.117V7.51zm0 1.471H8.148c-2.476 0-4.49-2.014-4.49-4.49S5.672 0 8.148 0h4.588v8.981zm-4.587-7.51c-1.665 0-3.019 1.355-3.019 3.019s1.354 3.02 3.019 3.02h3.117V1.471H8.148zm4.587 15.019H8.148c-2.476 0-4.49-2.014-4.49-4.49s2.014-4.49 4.49-4.49h4.588v8.98zM8.148 8.981c-1.665 0-3.019 1.355-3.019 3.019s1.355 3.019 3.019 3.019h3.117V8.981H8.148zM8.172 24c-2.489 0-4.515-2.014-4.515-4.49s2.014-4.49 4.49-4.49h4.588v4.441c0 2.503-2.047 4.539-4.563 4.539zm-.024-7.51a3.023 3.023 0 0 0-3.019 3.019c0 1.665 1.365 3.019 3.044 3.019 1.705 0 3.093-1.376 3.093-3.068v-2.97H8.148zm7.704 0h-.098c-2.476 0-4.49-2.014-4.49-4.49s2.014-4.49 4.49-4.49h.098c2.476 0 4.49 2.014 4.49 4.49s-2.014 4.49-4.49 4.49zm-.097-7.509c-1.665 0-3.019 1.355-3.019 3.019s1.355 3.019 3.019 3.019h.098c1.665 0 3.019-1.355 3.019-3.019s-1.355-3.019-3.019-3.019h-.098z"/></svg>
+              <p class="eng">Figma</p>
             </li>
           </ul>
         </div>
@@ -302,32 +305,47 @@
     </div>
     <ul>
       <li>
-        <a href="./src/design/01.jpg" target="_blank"></a>
+        <a href="./src/design/dm-map.jpg" target="_blank"></a>
+        <h2>공연장 맵 이미지 디자인 및 퍼블리싱</h2>
+        <p>티켓앤 공연 관련 컨텐츠</p>
+      </li>
+      <li>
+        <a href="./src/design/dm-setlist.jpg" target="_blank"></a>
+        <h2>공연 셋리스트 이미지 디자인 및 퍼블리싱</h2>
+        <p>티켓앤 공연 관련 컨텐츠</p>
+      </li>
+      <li>
+        <a href="./src/design/dm-artist.jpg" target="_blank"></a>
+        <h2>공연 아티스트 포토 디자인 퍼블리싱</h2>
+        <p>티켓앤 공연 관련 컨텐츠</p>
+      </li>
+      <li>
+        <a href="./src/design/leaders-01.jpg" target="_blank"></a>
         <h2>홍보 이미지 디자인</h2>
         <p>리더스트레이더 홍보 이미지</p>
       </li>
       <li>
-        <a href="./src/design/02.jpg" target="_blank"></a>
+        <a href="./src/design/leaders-02.jpg" target="_blank"></a>
         <h2>홍보 이미지 디자인</h2>
         <p>리더스트레이더 홍보 이미지</p>
       </li>
       <li>
-        <a href="./src/design/03.jpg" target="_blank"></a>
+        <a href="./src/design/leaders-03.jpg" target="_blank"></a>
         <h2>홍보 이미지 디자인</h2>
         <p>리더스트레이더 홍보 이미지</p>
       </li>
       <li>
-        <a href="./src/design/04.jpg" target="_blank"></a>
+        <a href="./src/design/leaders-04.jpg" target="_blank"></a>
         <h2>홍보 이미지 디자인</h2>
         <p>리더스트레이더 홍보 이미지</p>
       </li>
       <li>
-        <a href="./src/design/05.jpg" target="_blank"></a>
+        <a href="./src/design/leaders-05.jpg" target="_blank"></a>
         <h2>홍보 이미지 디자인</h2>
         <p>리더스트레이더 홍보 이미지</p>
       </li>
       <li>
-        <a href="./src/design/06.jpg" target="_blank"></a>
+        <a href="./src/design/leaders-06.jpg" target="_blank"></a>
         <h2>홍보 전단지 디자인</h2>
         <p>2022 AI 컨퍼런스 부스 홍보 전단지</p>
       </li>
