서브 페이지 배너 및 이미지 추가

--- a/work.html
+++ b/work.html
@@ -55,66 +55,66 @@
     </nav>
     <div class="container">
       <div class="projects">  
-        <a href="./works/4_ticketNContents.html" class="thumbnail">
+        <a href="./works/4_ticketNContents.html" class="thumbnail ticketN">
           <div class="overlay">
             <div class="textbox">
               <p>티켓앤 APP 서비스 컨텐츠 제작</p>
               <svg width="100" height="100" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M14 14L34 34M34 34V14M34 34H14" stroke="#1E1E1E" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M14 14L34 34M34 34V14M34 34H14" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
             </div>
           </div>
         </a>
-        <a href="./works/5_dreammakermail.html" class="thumbnail">
-          <div class="overlay">
-            <div class="textbox">
-              <p>드림메이커 엔터테인먼트 홈페이지 메일폼 제작</p>
-              <svg width="100" height="100" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M14 14L34 34M34 34V14M34 34H14" stroke="#1E1E1E" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="projects">
-        <a href="./works/3_ticketN.html" class="thumbnail">
+        <a href="./works/3_ticketN.html" class="thumbnail ticketN_web">
           <div class="overlay">
             <div class="textbox">
               <p>티켓앤 웹사이트 제작</p>
               <svg width="100" height="100" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M14 14L34 34M34 34V14M34 34H14" stroke="#1E1E1E" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>
-            </div>
-          </div>
-        </a>
-        <a href="./works/1_leaderstrading.html" class="thumbnail">
-          <div class="overlay">
-            <div class="textbox">
-              <p>(주)리더스트레이딩 홈페이지 리뉴얼</p>
-              <svg width="100" height="100" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M14 14L34 34M34 34V14M34 34H14" stroke="#1E1E1E" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M14 14L34 34M34 34V14M34 34H14" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
             </div>
           </div>
         </a>
       </div>
       <div class="projects">
-        <a href="./works/2_philips.html" class="thumbnail">
+        <a href="./works/5_dreammakermail.html" class="thumbnail dm">
           <div class="overlay">
             <div class="textbox">
-              <p>필립스코리아 홈페이지 리디자인 (개인)</p>
+              <p>드림메이커 엔터테인먼트 홈페이지 메일폼 제작</p>
               <svg width="100" height="100" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M14 14L34 34M34 34V14M34 34H14" stroke="#1E1E1E" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M14 14L34 34M34 34V14M34 34H14" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
             </div>
           </div>
         </a>
-        <a href="./works/6_designs.html" class="thumbnail">
+        <a href="./works/1_leaderstrading.html" class="thumbnail leaders">
+          <div class="overlay">
+            <div class="textbox">
+              <p>(주)리더스트레이딩 홈페이지 리뉴얼</p>
+              <svg width="100" height="100" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M14 14L34 34M34 34V14M34 34H14" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="projects">
+        <a href="./works/2_philips.html" class="thumbnail philips">
+          <div class="overlay">
+            <div class="textbox">
+              <p>필립스코리아 홈페이지 리디자인 (개인)</p>
+              <svg width="100" height="100" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M14 14L34 34M34 34V14M34 34H14" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </div>
+          </div>
+        </a>
+        <a href="./works/6_designs.html" class="thumbnail graphic">
           <div class="overlay">
             <div class="textbox">
               <p>기타 그래픽 작업</p>
               <svg width="100" height="100" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M14 14L34 34M34 34V14M34 34H14" stroke="#1E1E1E" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M14 14L34 34M34 34V14M34 34H14" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
               </svg>
             </div>
           </div>
@@ -122,5 +122,8 @@
       </div>
     </div>
   </div>
+  <footer>
+    <p>&copy;2025. Jiyun Kim All rights reserved.</p>
+  </footer>
 </body>
 </html>
