--- a/about.html
+++ b/about.html
@@ -81,5 +81,8 @@
       </div>
     </div>
   </div>
+  <footer class="bottom">
+    <p>&copy;2025. Jiyun Kim All rights reserved.</p>
+  </footer>
 </body>
 </html>
