--- a/works/4_ticketNContents.html
+++ b/works/4_ticketNContents.html
@@ -13,20 +13,45 @@
   <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
+  <!-- favicon -->
+  <link rel="apple-touch-icon" sizes="57x57" href="/img/favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/img/favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/img/favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/img/favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/img/favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/img/favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/img/favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/img/favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="/img/favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/img/favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 </head>
 <body>
   <div class="wrap">
-    <nav class="sub">
-      <a href="../work.html">
-        <div class="list">
-          <span class="prompt-regular colored">work</span>
-        </div>
-      </a>
-      <a href="../about.html">
-        <div class="list">
-          <span class="prompt-regular">about</span>
-        </div>
-      </a>
+    <nav>
+      <div class="logo">
+        <a href="/index.html">
+          <img src="/img/Logo_jk_letter.png" alt="logo">
+        </a>
+      </div>
+      <div class="menu">
+        <a href="work.html">
+          <div class="list">
+            <span class="prompt-regular">work</span>
+          </div>
+        </a>
+        <a href="about.html">
+          <div class="list">
+            <span class="prompt-regular colored">about</span>
+          </div>
+        </a>
+      </div>
     </nav>
     <div class="back">
       <a href="../work.html">
@@ -36,8 +61,8 @@
       </a>
     </div>
     <div class="work_box">
-      <div class="mainImg">
-        <!-- <img src="" alt=""> -->
+      <div class="mainImg ticketN">
+        <img src="../img/ticketn/ticketN_logo_w.png" alt="ticketN_logo_white">
       </div>
       <div class="description">
         <a class="name none">
@@ -60,5 +85,8 @@
       </div>
     </div>
   </div>
+  <footer>
+    <p>&copy;2025. Jiyun Kim All rights reserved.</p>
+  </footer>
 </body>
 </html>
