서브페이지 수정 및 내용 추가

--- a/works/1_leaderstrading.html
+++ b/works/1_leaderstrading.html
@@ -89,28 +89,30 @@
       </div>
 
       <div class="detail">
-        <img src="../img/leaders/leaders_banner.jpg" alt="">
-      </div>
-      <div class="detail half">
-        <img src="../img/leaders/leaders_web_laptop.png" alt="">
-        <div class="styleguide">
-          <p>Pretendard</p>
-          <p>Urbanist</p>
-          <div class="colors">
-            <div class="color-main">
-              <div class="mint"></div>
-              <div class="grey"></div>
-            </div>
-            <div class="color-black">
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-            </div>
+        <div class="img-container singleImg">
+          <img src="../img/leaders/leaders_banner.jpg" alt="leaders_banner" class="lt_banner">
+        </div>
+        <div class="img-container singleImg">
+          <img src="../img/leaders/leaders_web_laptop.png" alt="leaders_web_laptop" class="lt_laptop">
+        </div>
+        <div class="img-container">
+          <img src="../img/leaders/lt_pages.jpg" alt="leaders_pages" class="lt_pages">
+          <img src="../img/leaders/lt_pages_2.jpg" alt="leaders_pages_2" class="lt_pages_2">
+        </div>
+        <div class="lt-container">
+          <div class="img-container singleImg">
+            <img src="../img/leaders/lt_program.jpg" alt="leaders_program" class="lt_program">
           </div>
+          <p>
+            웹사이트 메뉴 우측 버튼에 연결된 서비스로,<br>
+            사이트를 방문하는 사람들이 실제 프로그램을 체험할 수 있도록 동일하게 구현한 페이지입니다.
+          </p>
+          <a href="https://jiyun8035.mycafe24.com/theme/LeadersTrading/demo/index.html" target="_blank">
+            <p>바로가기</p>
+            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 24 24">
+              <path d="M 3 3 L 3 21 L 21 21 L 21 12 L 19 12 L 19 19 L 5 19 L 5 5 L 12 5 L 12 3 L 3 3 z M 14 3 L 14 5 L 17.585938 5 L 8.2929688 14.292969 L 9.7070312 15.707031 L 19 6.4140625 L 19 10 L 21 10 L 21 3 L 14 3 z"></path>
+            </svg>
+          </a>
         </div>
       </div>
     </div>
