--- a/works/5_dreammakermail.html
+++ b/works/5_dreammakermail.html
@@ -92,25 +92,31 @@
         <div class="info">
           <div>
             <p>HTML / CSS</p>
-            <p>기여도 100% (디자인 / 퍼블리싱)</p>
+            <p>기여도 90% (디자인 / 퍼블리싱)</p>
             <p>작업기간 2일</p>
           </div>
           <p class="story">
             드림메이커 엔터테인먼트 웹사이트의 비윤리 신고 페이지와, 접수 시 자동 발송되는 메일폼을 제작하였습니다.<br>
-            메일폼 제작은 처음이라 코드를 쓰는 과정에서 시행착오가 있었지만 여러 시도 끝에 완성하게 되었습니다. 세부 기능은 웹 개발자와의 협업으로 완성하였습니다. 
+            메일폼 제작은 처음이라 코드를 쓰는 과정에서 시행착오가 있었지만 여러 시도 끝에 완성하게 되었습니다.<br>
+            세부 기능은 웹 개발자와의 협업으로 완성하였습니다. 
           </p>
         </div>
       </div>
       
       <div class="detail">
         <div class="dm">
-          <img src="/img/dm/dm_mockup.png" alt="dreammaker_report_images">
+          <img src="/img/dm/dm_mockup.png" alt="dreammaker_report_images" class="dm-mockup">
         </div>
       </div>
+      <div class="detail">
         <div class="dm"> 
-          <h6>메일 폼</h6>
-          <img src="/img/dm/dreammaker_email.jpg" alt="dm_email" class="dm_email">
+          <h6>메일 폼 & 세부 코드</h6>
+          <div class="img-container">
+            <img src="/img/dm/dreammaker_email.jpg" alt="dm_email" class="dm_email">
+            <img src="/img/dm/dm_email_code.jpg" alt="dm_email_code" class="dm_email_code">
+          </div>
         </div>
+      </div>
       </div>
     </div>
   </div>
