--- a/works/2_philips.html
+++ b/works/2_philips.html
@@ -88,10 +88,10 @@
         <div class="img-container mockup">
           <img src="../img/philips/ph_mockup.png" alt="philips_mockup">
         </div>
-        <div class="img-container">
+        <!-- <div class="img-container">
           <img src="../img/philips/ph_mockup.png" alt="philips_mockup">
           <img src="../img/philips/ph_mockup.png" alt="philips_mockup">
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
