반응형 미디어 쿼리 추가

--- a/works/1_leaderstrading.html
+++ b/works/1_leaderstrading.html
@@ -95,7 +95,7 @@
         <div class="img-container mockup">
           <img src="../img/leaders/leaders_web_laptop.png" alt="leaders_web_laptop" class="lt_laptop">
         </div>
-        <div class="img-container">
+        <div class="img-container lt">
           <img src="../img/leaders/lt_pages.jpg" alt="leaders_pages" class="lt_pages">
           <img src="../img/leaders/lt_pages_2.jpg" alt="leaders_pages_2" class="lt_pages_2">
         </div>
