--- a/works/5_dreammakermail.html
+++ b/works/5_dreammakermail.html
@@ -111,7 +111,7 @@
       <div class="detail">
         <div class="dm"> 
           <h6>메일 폼 & 세부 코드</h6>
-          <div class="img-container">
+          <div class="img-container dm">
             <img src="/img/dm/dreammaker_email.jpg" alt="dm_email" class="dm_email">
             <img src="/img/dm/dm_email_code.jpg" alt="dm_email_code" class="dm_email_code">
           </div>
