이미지 경로 수정

--- a/works/1_leaderstrading.html
+++ b/works/1_leaderstrading.html
@@ -90,18 +90,18 @@
 
       <div class="detail">
         <div class="img-container singleImg">
-          <img src=".../img/leaders/leaders_banner.jpg" alt="leaders_banner" class="lt_banner">
+          <img src="../img/leaders/leaders_banner.jpg" alt="leaders_banner" class="lt_banner">
         </div>
         <div class="img-container mockup">
-          <img src=".../img/leaders/leaders_web_laptop.png" alt="leaders_web_laptop" class="lt_laptop">
+          <img src="../img/leaders/leaders_web_laptop.png" alt="leaders_web_laptop" class="lt_laptop">
         </div>
         <div class="img-container lt">
-          <img src=".../img/leaders/lt_pages.jpg" alt="leaders_pages" class="lt_pages">
-          <img src=".../img/leaders/lt_pages_2.jpg" alt="leaders_pages_2" class="lt_pages_2">
+          <img src="../img/leaders/lt_pages.jpg" alt="leaders_pages" class="lt_pages">
+          <img src="../img/leaders/lt_pages_2.jpg" alt="leaders_pages_2" class="lt_pages_2">
         </div>
         <div class="lt-container">
           <div class="img-container singleImg">
-            <img src=".../img/leaders/lt_program.jpg" alt="leaders_program" class="lt_program">
+            <img src="../img/leaders/lt_program.jpg" alt="leaders_program" class="lt_program">
           </div>
           <p>
             웹사이트 메뉴 우측 버튼에 연결된 서비스로,<br>
