--- a/works/2_philips.html
+++ b/works/2_philips.html
@@ -62,7 +62,7 @@
     </div>
     <div class="work_box">
       <div class="mainImg philips">
-        <img src="./img/philips/philips_logo.png" alt="philips_logo">
+        <img src="../img/philips/philips_logo.png" alt="philips_logo">
       </div>
       <div class="description">
         <a href="https://devjiyunkim.github.io/philips-korea/" target="_blank" class="name">
