--- a/works/3_ticketN.html
+++ b/works/3_ticketN.html
@@ -62,7 +62,7 @@
     </div>
     <div class="work_box">
       <div class="mainImg ticketN_web">
-        <img src=".../img/ticketn/ticketN_logo.png" alt="ticketN_logo">
+        <img src="../img/ticketn/ticketN_logo.png" alt="ticketN_logo">
       </div>
       <div class="description">
         <a href="https://ticketn.net/" target="_blank" class="name">
@@ -87,16 +87,16 @@
       
       <div class="detail">
         <div class="img-container mockup">
-          <img src=".../img/ticketn/tn_mockup.png" alt="ticketN_web_mockup" class="tn_mockup">
+          <img src="../img/ticketn/tn_mockup.png" alt="ticketN_web_mockup" class="tn_mockup">
         </div>
         <!-- <div class="video-container">
           <video src=""></video>
         </div> -->
         <div class="img-container mockup">
-          <img src=".../img/ticketn/tn_pages.png" alt="ticketN_pages" class="tn_pages">
+          <img src="../img/ticketn/tn_pages.png" alt="ticketN_pages" class="tn_pages">
         </div>
         <div class="img-container mockup">
-          <img src=".../img/ticketn/tn_pages_2.png" alt="ticketN_pages_2" class="tn_pages_2">
+          <img src="../img/ticketn/tn_pages_2.png" alt="ticketN_pages_2" class="tn_pages_2">
         </div>
       </div>
     </div>
