--- a/works/5_dreammakermail.html
+++ b/works/5_dreammakermail.html
@@ -87,15 +87,15 @@
       
       <div class="detail">
         <div class="dm">
-          <img src="./img/dm/dm_mockup.png" alt="dreammaker_report_images" class="dm-mockup">
+          <img src="../img/dm/dm_mockup.png" alt="dreammaker_report_images" class="dm-mockup">
         </div>
       </div>
       <div class="detail">
         <div class="dm"> 
           <h6>메일 폼 & 세부 코드</h6>
           <div class="img-container dm">
-            <img src="./img/dm/dreammaker_email.jpg" alt="dm_email" class="dm_email">
-            <img src="./img/dm/dm_email_code.jpg" alt="dm_email_code" class="dm_email_code">
+            <img src="../img/dm/dreammaker_email.jpg" alt="dm_email" class="dm_email">
+            <img src="../img/dm/dm_email_code.jpg" alt="dm_email_code" class="dm_email_code">
           </div>
         </div>
       </div>
