이미지 경로 수정 및 미디어 쿼리 추가

--- a/works/2_philips.html
+++ b/works/2_philips.html
@@ -86,7 +86,7 @@
       
       <div class="detail">
         <div class="img-container mockup">
-          <img src=".../img/philips/ph_mockup.png" alt="philips_mockup">
+          <img src="../img/philips/ph_mockup.png" alt="philips_mockup">
         </div>
         <!-- <div class="img-container">
           <img src=".../img/philips/ph_mockup.png" alt="philips_mockup">
