--- a/works/4_ticketNContents.html
+++ b/works/4_ticketNContents.html
@@ -323,7 +323,7 @@
   <div class="wrap">
     <nav>
       <div class="logo">
-        <a href="/index.html">
+        <a href="../index.html">
           <img src="../img/Logo_jk_letter.png" alt="logo">
         </a>
       </div>
