--- a/works/6_designs.html
+++ b/works/6_designs.html
@@ -36,7 +36,7 @@
   <div class="wrap">
     <nav>
       <div class="logo">
-        <a href="/index.html">
+        <a href="../index.html">
           <img src="../img/Logo_jk_letter.png" alt="logo">
         </a>
       </div>
